force-app/main/default/objects/Lead_Source__c/Lead_Source__c.object-meta.xml
<CustomObject>
    <label>Lead Source</label>
    <nameField>
        <label>Lead Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>