force-app/main/default/objects/Lead_Source__c/fields/Ad_position__c.field-meta.xml
<CustomField>
    <fullName>Ad_position__c</fullName>
    <label>Ad position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>