force-app/main/default/objects/Lead_Source__c/fields/Banner_Size__c.field-meta.xml
<CustomField>
    <fullName>Banner_Size__c</fullName>
    <label>Banner Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>