force-app/main/default/objects/Lead_Source__c/fields/Bid_type__c.field-meta.xml
<CustomField>
    <fullName>Bid_type__c</fullName>
    <label>Bid type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>