force-app/main/default/objects/Lead_Source__c/fields/Channel_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Channel_Cluster__c</fullName>
    <label>Channel Cluster</label>
    <length>15</length>
    <type>Text</type>
</CustomField>