force-app/main/default/objects/Lead_Source__c/fields/Digital_Marketing_Code__c.field-meta.xml
<CustomField>
    <fullName>Digital_Marketing_Code__c</fullName>
    <label>Digital Marketing Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>