force-app/main/default/objects/Lead_Source__c/fields/Digital_Source__c.field-meta.xml
<CustomField>
    <fullName>Digital_Source__c</fullName>
    <label>Digital Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>facebook-lead-ad</fullName>
            </value>
            <value>
                <fullName>instagram-lead-ad</fullName>
            </value>
            <value>
                <fullName>instagram-story-ads</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>affiliate</fullName>
            </value>
            <value>
                <fullName>google</fullName>
            </value>
            <value>
                <fullName>pogrammatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>