force-app/main/default/objects/Lead_Source__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>