force-app/main/default/objects/Lead_Source__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>