force-app/main/default/objects/Lead_Source__c/fields/Lead_Source_27__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_27__c</fullName>
    <label>The Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>