force-app/main/default/objects/Lead_Source__c/fields/Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Match_Type__c</fullName>
    <label>Match Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>