force-app/main/default/objects/Lead_Source__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Lead Sources</relationshipLabel>
    <relationshipName>Lead_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>