force-app/main/default/objects/Lead_Source__c/fields/Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source__c</fullName>
    <label>Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>social-facebook-all-en</fullName>
            </value>
            <value>
                <fullName>social-facebook-all-ar</fullName>
            </value>
            <value>
                <fullName>social-facebook-all-cn</fullName>
            </value>
            <value>
                <fullName>social-instagram-all-en</fullName>
            </value>
            <value>
                <fullName>social-instagram-all-ar</fullName>
            </value>
            <value>
                <fullName>social-instagram-all-cn</fullName>
            </value>
            <value>
                <fullName>facebook-lead-ad</fullName>
            </value>
            <value>
                <fullName>social-facebook-villa-en</fullName>
            </value>
            <value>
                <fullName>social-facebook-story-villa-en</fullName>
            </value>
            <value>
                <fullName>social-instagram-villa-en</fullName>
            </value>
            <value>
                <fullName>social-instagram-story-villa-en</fullName>
            </value>
            <value>
                <fullName>social-facebook-villa-ar</fullName>
            </value>
            <value>
                <fullName>social-facebook-story-villa-ar</fullName>
            </value>
            <value>
                <fullName>social-instagram-villa-ar</fullName>
            </value>
            <value>
                <fullName>social-instagram-story-villa-ar</fullName>
            </value>
            <value>
                <fullName>social-facebook-uk -all-en</fullName>
            </value>
            <value>
                <fullName>social-instagram-uk -all-en</fullName>
            </value>
            <value>
                <fullName>social-instagram- story -uk-all- en</fullName>
            </value>
            <value>
                <fullName>social-instagram-professional-en</fullName>
            </value>
            <value>
                <fullName>social-instagram-professional-story-en</fullName>
            </value>
            <value>
                <fullName>social-facebook-uae-en</fullName>
            </value>
            <value>
                <fullName>social-facebook-uae-ar</fullName>
            </value>
            <value>
                <fullName>social-instagram-uae-en</fullName>
            </value>
            <value>
                <fullName>social-instagram-uae-ar</fullName>
            </value>
            <value>
                <fullName>social-instagram-story-uae-en</fullName>
            </value>
            <value>
                <fullName>social-instagram-story-uae-ar</fullName>
            </value>
            <value>
                <fullName>social-facebook-uk-en</fullName>
            </value>
            <value>
                <fullName>social-instagram-uk-en</fullName>
            </value>
            <value>
                <fullName>social-instagram-story-uk-en</fullName>
            </value>
            <value>
                <fullName>social-facebook-auh-en</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>