force-app/main/default/objects/Lead_Source__c/fields/Time_Spent_before_Form_Submit__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_before_Form_Submit__c</fullName>
    <label>Time Spent before Form Submit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>