force-app/main/default/objects/Lead_Source__c/fields/UTM_Medium_Key__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium_Key__c</fullName>
    <formula>Digital_Marketing_Code__c  &amp; Adset_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTM Medium Key</label>
    <type>Text</type>
</CustomField>