force-app/main/default/objects/Lead_Source__c/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <label>UTM Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>facebook</fullName>
            </value>
            <value>
                <fullName>instagram</fullName>
            </value>
            <value>
                <fullName>affiliate</fullName>
            </value>
            <value>
                <fullName>icubeswire</fullName>
            </value>
            <value>
                <fullName>optimise</fullName>
            </value>
            <value>
                <fullName>adzberry</fullName>
            </value>
            <value>
                <fullName>propertyfinder</fullName>
            </value>
            <value>
                <fullName>arabayads</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>ballyhoo</fullName>
            </value>
            <value>
                <fullName>flickstree</fullName>
            </value>
            <value>
                <fullName>adlantic</fullName>
            </value>
            <value>
                <fullName>platformance</fullName>
            </value>
            <value>
                <fullName>YallaCompare</fullName>
            </value>
            <value>
                <fullName>HOD</fullName>
            </value>
            <value>
                <fullName>Etiquette</fullName>
            </value>
            <value>
                <fullName>google</fullName>
            </value>
            <value>
                <fullName>mrn</fullName>
            </value>
            <value>
                <fullName>pogrammatic</fullName>
            </value>
            <value>
                <fullName>PropertyGuru</fullName>
            </value>
            <value>
                <fullName>Bayt</fullName>
            </value>
            <value>
                <fullName>HF</fullName>
            </value>
            <value>
                <fullName>Xiongma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>