force-app/main/default/objects/Lead_Source__c/fields/Web_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Source__c</fullName>
    <label>Web Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>