force-app/main/default/objects/Lead_Source__c/fields/Website_Language__c.field-meta.xml
<CustomField>
    <fullName>Website_Language__c</fullName>
    <label>Website Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>