force-app/main/default/objects/Lead_Source__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Digital_Marketing_Code__c</columns>
    <columns>UTM_Medium_Key__c</columns>
    <columns>Lead__c</columns>
    <columns>Sub_Source__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UTM_Campaign__c</columns>
    <columns>UTM_Content__c</columns>
    <columns>UTM_Medium__c</columns>
    <columns>UTM_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>